src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>IT_Financial_Center_Closed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Center Closed</label>
        <referenceTo>ER_Financial_Center__c</referenceTo>
        <relationshipLabel>Account (Financial Center Closed)</relationshipLabel>
        <relationshipName>Account1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Financial_Center_In_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Center In Definition</label>
        <referenceTo>ER_Financial_Center__c</referenceTo>
        <relationshipLabel>Account (Financial Center In Definition)</relationshipLabel>
        <relationshipName>Account2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Fiscal_Code__c</fullName>
        <label>Fiscal Code</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Foreign_VAT_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foreign VAT Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Future_Change_Account__c</fullName>
        <label>Future Change Account</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IT_Future_Change_Address__c</fullName>
        <label>Future Change Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IT_Future_Change_VAT_Group__c</fullName>
        <label>Future Change VAT Group</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IT_Group_VAT_Number__c</fullName>
        <label>Group VAT Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Hamlet_Code__c</fullName>
        <label>Hamlet Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Hamlet__c</fullName>
        <label>Hamlet</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IT_Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Initiative__c</fullName>
        <label>Initiative</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D/C</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Institution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Institution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Invoice_Naming__c</fullName>
        <label>Invoice Naming</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Legal_Form__c</fullName>
        <label>Legal Form</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IT_Legal_Form</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_MetRef_Loc_X__c</fullName>
        <label>MetRef Loc X</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_MetRef_Loc_Y__c</fullName>
        <label>MetRef Loc Y</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_NSO__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Nodo Smistamento Ordini</inlineHelpText>
        <label>NSO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Private_work_for_institution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private (work for institution)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Red_White__c</fullName>
        <formula>IF( 
 OR(
  ISPICKVAL(ER_Segment__c, &apos;S&apos;),
  IT_TOP__c
 ),
 &apos;Red&apos;,
 &apos;White&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red/White</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Region_code__c</fullName>
        <label>Region code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Road_Arch_Code__c</fullName>
        <label>Road Arch Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Send_Client_Billing_SDI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Client Billing SDI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Sestiere_Code__c</fullName>
        <label>Sestiere Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Short_Address__c</fullName>
        <label>Short Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Split_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Split Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_State_Code__c</fullName>
        <label>State Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IT_Province_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Street_Code__c</fullName>
        <label>Street Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_TOP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TOP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Toponym__c</fullName>
        <label>Toponym</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Merchant</fullName>
                </value>
                <value>
                    <fullName>Merchant Client</fullName>
                </value>
                <value>
                    <fullName>Group Brand</fullName>
                </value>
                <value>
                    <fullName>Subsidiary Brand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_VAT_Group_AC_User__c</fullName>
        <label>VAT Group AC User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_VAT_Group_Naming__c</fullName>
        <label>VAT Group Naming</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_VAT_Group_PEC__c</fullName>
        <label>VAT Group PEC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IT_VAT_Group_SDI__c</fullName>
        <label>VAT Group SDI</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_VAT_Group_Start_Date__c</fullName>
        <label>VAT Group Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Validity_End_Date__c</fullName>
        <label>Validity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Validity_Start_Date__c</fullName>
        <label>Validity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Vat_Group_End_Date__c</fullName>
        <label>Vat Group End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Zone__c</fullName>
        <label>Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IT_Zone</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ER_Status__c</columns>
        <columns>ER_VAT_Number__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ER_Business_Unit__pc</columns>
        <columns>ER_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tutti gli account</label>
    </listViews>
    <listViews>
        <fullName>All_Client</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_Business_Unit__pc</field>
            <operation>equals</operation>
            <value>MY</value>
        </filters>
        <label>All Client</label>
        <sharedTo>
            <role>Client_Sales_Manager</role>
            <role>Client_Sales_Rep</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Merchant</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.ER_Company_Account_RT</value>
        </filters>
        <label>All Merchant</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Users</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_EMAIL</columns>
        <columns>ER_Email__c</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.ER_User_Account_RT</value>
        </filters>
        <label>All Users</label>
        <language>en_US</language>
        <sharedTo>
            <role>Customer_Service_Manager</role>
            <role>Customer_Service_Rep</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ERPL_Poland_All_Accounts</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_BUPicklist__c</field>
            <operation>equals</operation>
            <value>PL</value>
        </filters>
        <filters>
            <field>ER_Business_Unit__c</field>
            <operation>equals</operation>
            <value>PL</value>
        </filters>
        <filters>
            <field>ER_Business_Unit__pc</field>
            <operation>equals</operation>
            <value>PL</value>
        </filters>
        <label>Poland: All Accounts</label>
        <sharedTo>
            <roleAndSubordinates>Poland</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Group_Brand_Subsidiaries_Brand</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ER_Group_Subsidiary_relationship__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.ER_Group_Brand</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Group Brand</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Subsidiary Brand</value>
        </filters>
        <label>Group Brand / Subsidiaries Brand</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Account</fullName>
        <active>true</active>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>ER_Company_Account_RT</fullName>
        <active>true</active>
        <description>Merge of Merchant and Client Record types into Company</description>
        <label>Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>ER_Group_Brand</fullName>
        <active>false</active>
        <label>Group / Brand</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>VRER01_CompanyRegistrationNumber_or_Vat</fullName>
        <active>true</active>
        <description>Vat number or Company Registration Number are obligatory on the account</description>
        <errorConditionFormula>AND(
NOT($User.ER_BypassVR__c),
NOT(IsPersonAccount),
ISBLANK(ER_VAT_Number__c),
ISBLANK( ER_Registration_Number__c)
)</errorConditionFormula>
        <errorMessage>Filling VAT Number or Company Registration Number is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRHU01_Phone_Number_Hungarian_Format</fullName>
        <active>true</active>
        <description>This validation rule will control the phone number format to ensure it fit Hungarian format, as following:
            +36-1-111-1111(capital city)
            +36-11-111-111(countryside)
            +36-11-111-1111(mobile phones)</description>
            <errorConditionFormula>AND(
                NOT($User.ER_BypassVR__c),
                ER_Business_Unit__c = &apos;HU&apos;,
                NOT(
                OR(
                LEN(Phone) = 0,
                REGEX(Phone, &quot;[+36]{3}-[0-9]{1}-[0-9]{3}-[0-9]{4}&quot;),
                REGEX(Phone, &quot;[+36]{3}-[0-9]{2}-[0-9]{3}-[0-9]{3}&quot;),
                REGEX(Phone, &quot;[+36]{3}-[0-9]{2}-[0-9]{3}-[0-9]{4}&quot;)
                )))
            </errorConditionFormula>
            <errorDisplayField>Phone</errorDisplayField>
            <errorMessage>The format of the Phone Number must be equal to Hungarian format, as following :
                +36-1-111-1111 (capital city)
                +36-11-111-111 (countryside)
                +36-11-111-1111 (mobile phones)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRHU02_VAT_Number_Hungarian_Format</fullName>
        <active>true</active>
        <description>This validation rule ensure that the format of the VAT Number is correctly captured by User, and follow the hungarian format. This rule can be bypassed by a User by checking the field &apos;BypassVR&apos; on its account.</description>
        <errorConditionFormula>AND( 
            NOT($User.ER_BypassVR__c),
            ER_Business_Unit__c = &apos;HU&apos;, 
            NOT( 
            OR( 
            LEN( ER_VAT_Number__c ) = 0, 
            REGEX(ER_VAT_Number__c , &quot;[0-9]{8}-[0-9]{1}-[0-9]{2}&quot;)
            )))</errorConditionFormula>
            <errorDisplayField>ER_VAT_Number__c</errorDisplayField>
            <errorMessage>The format of the VAT Number must match Hungarian format : 11 digits xxxxxxxx-x-xx</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRIT01_Legal_Name</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    $User.ER_BypassVR__c = False,
    ISPICKVAL($User.ER_Business_Unit__c , &apos;IT&apos;),
OR(
CONTAINS ( Name ,&apos;À&apos;),
CONTAINS ( Name ,&apos;È&apos;),
CONTAINS ( Name ,&apos;Ì&apos;),
CONTAINS ( Name ,&apos;Ò&apos;),
CONTAINS ( Name ,&apos;Ù&apos;),
CONTAINS ( Name ,&apos;Á&apos;),
CONTAINS ( Name ,&apos;É&apos;),
CONTAINS ( Name ,&apos;Í&apos;),
CONTAINS ( Name ,&apos;Ó&apos;),
CONTAINS ( Name ,&apos;Ú&apos;),
CONTAINS ( Name ,&apos;Ä&apos;),
CONTAINS ( Name ,&apos;Ë&apos;),
CONTAINS ( Name ,&apos;Ï&apos;),
CONTAINS ( Name ,&apos;Ö&apos;),
CONTAINS ( Name ,&apos;Ü&apos;),
CONTAINS ( Name ,&apos;°&apos;),
CONTAINS ( Name ,&apos;€&apos;),
CONTAINS ( Name ,&apos;¿&apos;),
CONTAINS ( Name ,&apos;|&apos;)
))</errorConditionFormula>
        <errorMessage>The Legal Name can&apos;t contains characters:
ÀÈÌÒÙÁÉÍÓÚÄËÏÖÜ°€¿|</errorMessage>
    </validationRules>
<validationRules>
        <fullName>VRIT02_VAT_Group</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &apos;IT&apos;),

NOT(ISBLANK( IT_VAT_Group_Naming__c )),					ISBLANK(IT_VAT_Group_PEC__c), 
ISBLANK( IT_VAT_Group_SDI__c )

)</errorConditionFormula>
        <errorMessage>At least one value must be entered: PEC VAT group or SDI VAT Group!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRIT03_Company_Type_Institution</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &apos;IT&apos;),
 $Profile.Name != &apos;System Administrator&apos;,
 $Profile.Name != &apos;IT CRM&apos;,
 $Profile.Name != &apos;IT System Integration&apos;,

OR(
 ISPICKVAL( IT_Company_Type__c, &apos;Institution&apos;) ,
 ISPICKVAL( IT_Company_Type__c, &apos;Private (work for Institution)&apos;)),

 ISPICKVAL(PRIORVALUE( IT_Company_Type__c ), &apos;Private&apos;)

)</errorConditionFormula>
        <errorMessage>Impossible to change Company Type from &quot;Private&quot; to &quot;Institution&quot; or &quot;Private work for Institution&quot; !</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRIT04_Split_Payment_VAT_Group</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &apos;IT&apos;),

 ISCHANGED( IT_Split_Payment__c ),
 NOT( ISBLANK(IT_VAT_Group_Naming__c ) )

)</errorConditionFormula>
        <errorMessage>Impossible to change Split Payment for VAT Group associated client!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRIT05_Fields_Populated</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &apos;IT&apos;),

OR(
 ISPICKVAL( IT_Company_Type__c, &quot;&quot; ) ,
 ISPICKVAL( IT_Legal_Form__c, &quot;&quot; ) ,
 ISPICKVAL( IT_Industry__c, &quot;&quot; ) ,
 ISBLANK( ER_VAT_Number__c ) ,
 ISBLANK( IT_Fiscal_Code__c ) 

))</errorConditionFormula>
        <errorMessage>This fields must be populated!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRIT05_Modify</fullName>
        <active>false</active>
        <errorConditionFormula>AND (
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &apos;IT&apos;),
NOT(
OR( 
ISPICKVAL(ER_FinancialCenter__pr.IT_Service__c , &apos;1B&apos;),
ISPICKVAL( ER_FinancialCenter__pr.IT_Service__c , &apos;1X&apos;),
ISPICKVAL( ER_FinancialCenter__pr.IT_Service__c , &apos;2X&apos;),
ISPICKVAL(ER_FinancialCenter__pr.IT_Service__c , &apos;0G&apos;),
ISPICKVAL( ER_FinancialCenter__pr.IT_Service__c , &apos;0F&apos;),
ISPICKVAL( ER_FinancialCenter__pr.IT_Service__c , &apos;0H&apos;),
ISPICKVAL( ER_FinancialCenter__pr.IT_Service__c , &apos;0P&apos;),
ISPICKVAL( ER_FinancialCenter__pr.IT_Service__c , &apos;0Q&apos;),
ISPICKVAL( ER_FinancialCenter__pr.IT_Service__c , &apos;1W&apos;),
ISPICKVAL( ER_FinancialCenter__pr.IT_Service__c, &apos;2F&apos;),
ISPICKVAL( ER_FinancialCenter__pr.IT_Service__c , &apos;2G&apos;),
ISPICKVAL( ER_FinancialCenter__pr.IT_Service__c , &apos;1D&apos;),
ISPICKVAL( ER_FinancialCenter__pr.IT_Service__c , &apos;1L&apos;),
ISPICKVAL( ER_FinancialCenter__pr.IT_Service__c , &apos;1M&apos;),
ISPICKVAL( ER_FinancialCenter__pr.IT_Service__c, &apos;1N&apos;),
ISPICKVAL( ER_FinancialCenter__pr.IT_Service__c , &apos;1O&apos;),
ISPICKVAL( ER_FinancialCenter__pr.IT_Service__c, &apos;1E&apos;),
ISPICKVAL( ER_FinancialCenter__pr.IT_Service__c, &apos;1Y&apos;),
ISPICKVAL(ER_FinancialCenter__pr.IT_Service__c , &apos;1H&apos;),
ISPICKVAL(ER_FinancialCenter__pr.IT_Service__c , &apos;2J&apos;),
ISPICKVAL( ER_FinancialCenter__pr.IT_Service__c , &apos;2X&apos;),
AND( 
NOT(ISBLANK(ER_FinancialCenter__pr.IT_DEMO_Financial_Center__c )),
ISPICKVAL(ER_FinancialCenter__pr.IT_Service__c , &apos;1B&apos;)
)
)
))</errorConditionFormula>
        <errorMessage>Impossible to modify for this type of service</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRIT06_SDI</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &apos;IT&apos;),
NOT(ISBLANK(IT_Group_VAT_Number__c)) ,
ISBLANK(IT_VAT_Group_SDI__c) ,
IT_Send_Client_Billing_SDI__c = false)</errorConditionFormula>
        <errorMessage>SDI mandatory at VAT group level</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRIT07_SDIcharacters</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &apos;IT&apos;),
IT_VAT_Group_SDI__c &lt;&gt; UPPER(IT_VAT_Group_SDI__c))</errorConditionFormula>
        <errorMessage>You cannot enter uppercase characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRIT08_SDILen</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &apos;IT&apos;),

IT_VAT_Group_SDI__c != null,

OR(

AND(

OR(
ISPICKVAL ( IT_Company_Type__c , &apos;Institution&apos;),
ISPICKVAL( IT_Company_Type__c, &apos;Private (work for Institution)&apos;)),

OR(
LEN (IT_VAT_Group_SDI__c) &lt; 6,
LEN (IT_VAT_Group_SDI__c) &gt; 6)),

ISPICKVAL ( IT_Company_Type__c , &apos;Private&apos;),
OR(
LEN (IT_VAT_Group_SDI__c) &lt; 7,
LEN (IT_VAT_Group_SDI__c) &gt; 7))
)</errorConditionFormula>
        <errorMessage>If Company Type is Institution or Private works for Institution, VAT Group SDI must contains 6 characters!
If Company Type is Private, VAT Group SDI must contains 7 characters!</errorMessage>
    </validationRules>
</CustomObject>